--- a/style/style.css
+++ b/style/style.css
@@ -23,15 +23,15 @@
 .section-bg{
    background: rgb(255, 248, 243);
    padding-top: 5px;
+ 
 }
 .header{
    max-width:1600px;  
-    height: 0 auto;
+    height:  auto;
     background-image: url(../images/developer.png), url(../images/header_bg.png);
     background-repeat: no-repeat;
-    background-position: top 30px left 80px,bottom 5px right ;
-   
-   /* padding: 60px 5px 0px 0px; */
+    background-position: top 30px left 80px,bottom 4px  right ;
+
    
 }
 /* shared button */
@@ -110,12 +110,16 @@ line-height: 20px;
 .image-position{
    width: 580px;
    height: auto;
+
+  
+   
+
 }
 .banner{
     display: flex;
     align-items: center;
   justify-content: space-between;
-  margin: 0px 50px 0 300px;
+  margin: 0px 50px 80px 300px;
   
 
 }
@@ -145,4 +149,56 @@ font-weight: 400;
 line-height: 15px;
 padding-bottom: 15px;
 
+}
+
+/* main */
+main{
+  max-width: 1140px;
+  margin: 0 auto;
+}
+.about-items{
+  display: flex;
+  justify-content: space-around;
+   
+}
+
+.about{
+  border-radius: 10px;
+  padding: 130px 150px;
+  text-align: center;
+}
+main section h1{
+  color: rgb(24, 24, 24);
+font-size: 35px;
+font-weight: 700;
+line-height: 35px;
+margin: 10px 0 80px;
+
+}
+.main-section{
+  color: rgb(117, 117, 117);
+font-family: Open Sans;
+font-size: 15px;
+font-weight: 400;
+line-height: 20px;
+margin: 0 0 50px;
+
+}
+
+.item-description {
+    font-weight: bold;
+    color: rgb(117, 117, 117);
+}
+.item-title{
+
+  color: rgb(117, 117, 117);
+}
+
+.border{
+  box-sizing: border-box;
+border: 1px solid rgb(0, 0, 0);
+background: rgb(255, 255, 255);
+width: 827px;
+height: 287px;
+text-align: center;
 }
