--- a/style/style.css
+++ b/style/style.css
@@ -19,6 +19,9 @@
 .r-colour{
     color: rgb(253, 110, 10);
 }
+.text-center{
+  text-align: center;
+}
 /* shared section bg */
 .section-bg{
    background: rgb(255, 248, 243);
@@ -166,6 +169,7 @@ main{
   border-radius: 10px;
   padding: 130px 150px;
   text-align: center;
+  margin-bottom: 80px;
 }
 main section h1{
   color: rgb(24, 24, 24);
@@ -201,4 +205,62 @@ background: rgb(255, 255, 255);
 width: 827px;
 height: 287px;
 text-align: center;
+}
+
+/* sections skills */
+.section-titile{
+  color: rgb(24, 24, 24);
+font-family: Open Sans;
+font-size: 30px;
+font-weight: 700;
+line-height: 30px;
+margin-bottom: 30px;
+
+}
+.section-description{
+  color: rgb(117, 117, 117);
+font-family: Open Sans;
+font-size: 15px;
+font-weight: 400;
+line-height: 30px;
+
+}
+.skills {
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-around;
+  border-radius: 5px;
+
+}
+
+.skills-container{
+  border-radius: 5px;
+box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+background: rgb(255, 255, 255);
+width: 200px;
+height: 220px;
+
+}
+.skill-title{
+color: rgb(24, 24, 24);
+font-size: 15px;
+font-weight: 700;
+line-height: 15px;
+margin: 15px 15px 15px 15px;
+
+}
+.img{
+
+width: 30px;
+height: 30px;
+margin: 15px 15px 10px 15px;
+
+}
+.skill-description{
+  color: rgb(117, 117, 117);
+font-family: Open Sans;
+font-size: 12px;
+font-weight: 400;
+line-height: 20px;
+margin: 15px 15px 10px 18px;
 }
