--- a/style/style.css
+++ b/style/style.css
@@ -230,6 +230,7 @@ line-height: 30px;
   display: flex;
   justify-content: space-around;
   border-radius: 5px;
+  margin-bottom: 80px;
 
 }
 
@@ -238,7 +239,7 @@ line-height: 30px;
 box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 background: rgb(255, 255, 255);
 width: 200px;
-height: 220px;
+height: 250px;
 
 }
 .skill-title{
@@ -263,4 +264,65 @@ font-size: 12px;
 font-weight: 400;
 line-height: 20px;
 margin: 15px 15px 10px 18px;
+}
+
+/* section experience added */
+.resume-container{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  justify-items: center;
+  gap: 30px;
+  margin-left: 150px;
+  margin-top: 50px;
+}
+.section-resume{
+  color: rgb(24, 24, 24);
+font-size: 20px;
+font-weight: 700;
+line-height: 25px;
+
+
+}
+.resume hr{
+  margin: 20px;
+}
+.resume-colum-title{
+  color: rgb(71, 71, 71);
+font-size: 20px;
+font-weight: 700;
+line-height: 24px;
+margin-bottom:15px;
+margin-left: 15px;
+
+}
+.experience-title{
+  color: rgb(71, 71, 71);
+font-size: 15px;
+font-weight: 700;
+line-height: 18px;
+margin-left: 15px;
+
+}
+.experience-sub-title{
+  color: rgb(117, 117, 117);
+font-size: 12px;
+font-weight: 600;
+line-height: 10px;
+margin-top: 5px;
+margin-left: 15px;}
+
+.experience-des{
+  color: rgb(117, 117, 117);
+font-size: 12px;
+font-weight: 400;
+line-height: 15px;
+margin-top: 20px;
+margin-left: 15px;
+
+}
+.btn-wrapper {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
 }
