added all elements

--- a/style/style.css
+++ b/style/style.css
@@ -90,7 +90,9 @@ line-height: 15px;
 .btn-icon {
   width: 15px;
   height: 15px;
-  padding-right: 10px;
+ 
+  background-color: rgb(253, 110, 10);
+
 
 
 }
